[project]
name = "cspy"
version = "0.1.0"
description = "Content Security Policy parsing utilities"
authors = [
    {name = "pchaseh",email = "chase@path.net"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pydantic (>=2.10.5,<3.0.0)"
]
packages = [{include = "cspy"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
